# zapshare

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yaml  build_cli.yaml  build_server.yaml
central_server/: .gitignore  CMakeLists.txt  main.cpp  startServer.sh
central_server/include/: database.hpp  server.hpp
cli_tool/: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp
cli_tool/include/: client.hpp  crypto.hpp  error.hpp  httplib.h  server.hpp  session.hpp  types.h  utils.hpp
cli_tool/src/: client.cpp  server.cpp
proto/: CMakeLists.txt
proto/v1/: central_server.proto  common.proto  control.proto  handshake.proto
shared/: CMakeLists.txt
shared/include/crypto/: session_crypto.hpp
shared/include/utils/: check.hpp
shared/src/crypto/: session_crypto.cpp
tests/: CMakeLists.txt  CryptoTest.cpp
